--- a/munck.html
+++ b/munck.html
@@ -6,24 +6,28 @@
     <title>Munck</title>
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   </head>
   <body>
+    <!-- TOP MENU -->
     <section class="hide-on-med-and-down">
       <div class="container">
         <div class="row">
           <div class="col s6">
-          <br>
-            <img src="../img/logotipo-WorkX.png" alt="WorkX Logo">
+            <br>
+            <a href="index.html"><img src="img/logotipo-WorkX.png" alt="WorkX Logo"></a>
           </div>
           <div class="col s6">
-            <ul class="inline right">
-            <li><a href="#"><img src="http://placehold.it/50" alt="Facebook"></a></li>
-            <li><a href="#"><img src="http://placehold.it/50" alt="Youtube"></a></li>
-            <li><a href="#"><img src="http://placehold.it/50" alt="Instagram"></a></li>
-            <li><a href="#"><img src="http://placehold.it/50" alt="Google+"></a></li>
-            </ul>
+              <ul class="inline right">
+                <li><a href="#"><img src="img/header/facebook-1.png" height="43" width="42" alt="Facebook" class="circle hoverable" title="social-link"></a></li>
+                <li><a href="#"><img src="img/header/youtube-1.png" height="43" width="42" alt="Youtube" class="circle hoverable" title="social-link"></a></li>
+                <li><a href="#"><img src="img/header/instagram-1.png" height="43" width="42" alt="Instagram" class="circle hoverable" title="social-link"></a></li>
+                <li><a href="#"><img src="img/header/google-1.png" height="43" width="42" alt="Google+" class="circle hoverable" title="social-link"></a></li>
+              </ul>
+          </div>
+          <div class="col s12">
+            <p class="right-align telefone-contato"><strong>(21) 2564-2454 / 9703-46374 / ID 35*43*74901</strong></p>
           </div>
         </div>
       </div>
@@ -31,41 +35,40 @@
     <!-- MENU -->
     <nav class="red darken-4">
       <div class="container">
-      <ul id="slide-out" class="side-nav">
-      <img src="../img/logotipo-WorkX.png" alt="WorkX Logo" width="80%" class="logo-side-nav">
-    <li><a href="../index.html">Home</a></li>
-    <li class="no-padding">
-      <ul class="collapsible collapsible-accordion">
-        <li>
-          <a class="collapsible-header">Serviços<i class="mdi-navigation-arrow-drop-down"></i></a>
-          <div class="collapsible-body">
-            <ul>
-              <li><a href="munck.html">Munck</a></li>
-              <li><a href="guindaste.html">Guindastes</a></li>
-              <li><a href="icamento.html">Içamentos</a></li>
-              <li><a href="remocao.html">Remoções</a></li>
+        <ul id="slide-out" class="side-nav">
+          <img src="img/logotipo-WorkX.png" alt="WorkX Logo" width="80%" class="logo-side-nav">
+          <li><a href="index.html">Home</a></li>
+          <li class="no-padding">
+            <ul class="collapsible collapsible-accordion">
+              <li>
+                <a class="collapsible-header">Serviços<i class="mdi-navigation-arrow-drop-down"></i></a>
+                <div class="collapsible-body">
+                  <ul>
+                    <li><a href="munck.html">Munck</a></li>
+                    <li><a href="guindaste.html">Guindastes</a></li>
+                    <li><a href="icamento.html">Içamentos</a></li>
+                    <li><a href="remocao.html">Remoções</a></li>
+                  </ul>
+                </div>
+              </li>
             </ul>
-          </div>
-        </li>
-      </ul>
-    </li>
-    <li><a href="../orcamento.html">Orçamento</a></li>
-    <li><a href="../contato.html">Contato</a></li>
-
-  </ul>
-  <ul class="right hide-on-med-and-down">
-    <li><a href="../index.html">Home</a></li>    
-    <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-    <ul id='dropdown1' class='dropdown-content'>
-      <li><a href="munck.html">Munck</a></li>
-      <li><a href="guindaste.html">Guindastes</a></li>
-      <li><a href="icamento.html">Içamentos</a></li>
-      <li><a href="remocao.html">Remoções</a></li>
-    </ul>
-    <li><a href="../orcamento.html">Orçamento</a></li>
-    <li><a href="../contato.html">Contato</a></li>
-  </ul>
-  <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+          </li>
+          <li><a href="orcamento.html">Orçamento</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Home</a></li>
+          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Serviços<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+          <ul id='dropdown1' class='dropdown-content'>
+            <li><a href="munck.html">Munck</a></li>
+            <li><a href="guindaste.html">Guindastes</a></li>
+            <li><a href="icamento.html">Içamentos</a></li>
+            <li><a href="remocao.html">Remoções</a></li>
+          </ul>
+          <li><a href="orcamento.html">Orçamento</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+        <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       </div>
     </nav>
 
@@ -74,10 +77,23 @@
   <div class="container">
     <div class="row">
       <div class="col s12 l5">
-        <img src="../img/munck/munck-principal.jpg" alt="Munck" height="500" width="100%">
+        <img src="img/munck/munck-principal.jpg" alt="Munck" height="500" width="100%">
       </div>
       <div class="col s12 l7">
         <h1>Munck</h1>
+        <span>Outros Serviços: </span><div class="chip">
+            Munck
+          </div>
+          <div class="chip">
+            <a href="guindaste.html">Guindastes</a>
+          </div>
+          <div class="chip">
+            <a href="icamento.html">Içamentos</a>
+          </div>
+          <div class="chip">
+            <a href="remocao.html">Remoção</a>
+          </div>
+          <br><br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, similique voluptates soluta modi aperiam pariatur itaque dolorum deleniti, nesciunt, consequatur error. Voluptatibus placeat, maiores eaque asperiores? Quam cumque, iure enim!</p>
         <br>
         <div class="divider"></div>
@@ -144,7 +160,7 @@
   </footer>
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="../js/materialize.js"></script>
-  <script src="../js/init.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
 </body>
 </html>
