--- a/guindaste.html
+++ b/guindaste.html
@@ -118,36 +118,33 @@
         </div>
       </div>
     </div>
-    <footer class="page-footer grey darken-3">
-      <div class="container">
-        <div class="row">
-          <div class="col l9 s12">
-            <h5 class="white-text">Entre em contato</h5>
-            <p class="grey-text text-lighten-4">
-              (21) 2564-2454 / 9703-46374 / ID 35*43*74901 <br>
-            E-mail: comercial@workxtransportes.com.br</p>
-          </div>
-          <div class="col l3 s12">
-            <h5 class="white-text">Menu</h5>
-            <ul>
-              <li><a class="orange-text text-lighten-3" href="#!">Home</a></li>
-              <li><a class="orange-text text-lighten-3" href="#!">Serviços</a>
-              <ul>
-                <li><a class="white-text" href="#!">Munk</a></li>
-                <li><a class="white-text" href="#!">Guindaste</a></li>
-                <li><a class="white-text" href="#!">Munk</a></li>
-                <li><a class="white-text" href="#!">Guindaste</a></li>
-              </ul>
-            </li>
-            <li><a class="orange-text text-lighten-3" href="#!">Orçamento</a></li>
-            <li><a class="orange-text text-lighten-3" href="#!">Contato</a></li>
+  <!-- FOOTER -->
+  <footer class="page-footer grey darken-3">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <ul class="inline center">
+            <li><a class="orange-text text-lighten-3" href="index.html">Home</a></li>
+            <li><a class="orange-text text-lighten-3" href="munck.html">Munk</a></li>
+            <li><a class="orange-text text-lighten-3 footer-active" href="#!">Guindaste</a></li>
+            <li><a class="orange-text text-lighten-3" href="icamento.html">Içamento</a></li>
+            <li><a class="orange-text text-lighten-3" href="remocao.html">Remoção</a></li>
+            <li><a class="orange-text text-lighten-3" href="orcamento.html">Orçamento</a></li>
+            <li><a class="orange-text text-lighten-3" href="contato.html">Contato</a></li>
           </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12">
+          <p class="grey-text text-lighten-4 center">
+            (21) 2564-2454 / 9703-46374 / ID 35*43*74901 <br>
+          E-mail: comercial@workxtransportes.com.br</p>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-        Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        <span class="center">Desenvolvido por <a class="orange-text text-lighten-3" href="http://www.mideiasdigitais.com.br" target="_blank">Mideias Digitais</a> e <a class="orange-text text-lighten-3" href="http://www.behance.net/BetoCorreaJr" target="_blank">Beto Junior</a></span>
       </div>
     </div>
   </footer>
