--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <a href="index.html"><img src="img/logotipo-WorkX.png" alt="WorkX Logo"></a>
           </div>
           <div class="col s6">
-              <ul class="inline right">
-                <li><a href="#"><img src="img/header/facebook-1.png" height="43" width="42" alt="Facebook" class="circle hoverable" title="social-link"></a></li>
-                <li><a href="#"><img src="img/header/youtube-1.png" height="43" width="42" alt="Youtube" class="circle hoverable" title="social-link"></a></li>
-                <li><a href="#"><img src="img/header/instagram-1.png" height="43" width="42" alt="Instagram" class="circle hoverable" title="social-link"></a></li>
-                <li><a href="#"><img src="img/header/google-1.png" height="43" width="42" alt="Google+" class="circle hoverable" title="social-link"></a></li>
-              </ul>
+            <ul class="inline right">
+              <li><a href="#"><img src="img/header/facebook-1.png" height="43" width="42" alt="Facebook" class="circle hoverable" title="social-link"></a></li>
+              <li><a href="#"><img src="img/header/youtube-1.png" height="43" width="42" alt="Youtube" class="circle hoverable" title="social-link"></a></li>
+              <li><a href="#"><img src="img/header/instagram-1.png" height="43" width="42" alt="Instagram" class="circle hoverable" title="social-link"></a></li>
+              <li><a href="#"><img src="img/header/google-1.png" height="43" width="42" alt="Google+" class="circle hoverable" title="social-link"></a></li>
+            </ul>
           </div>
           <div class="col s12">
             <p class="right-align telefone-contato"><strong>(21) 2564-2454 / 9703-46374 / ID 35*43*74901</strong></p>
@@ -204,39 +204,35 @@
       <footer class="page-footer grey darken-3">
         <div class="container">
           <div class="row">
-            <div class="col l9 s12">
-              <h5 class="white-text">Entre em contato</h5>
-              <p class="grey-text text-lighten-4">
+            <div class="col s12">
+              <ul class="inline center">
+                <li><a class="orange-text text-lighten-3 footer-active" href="#!">Home</a></li>
+                <li><a class="orange-text text-lighten-3" href="munck.html">Munk</a></li>
+                <li><a class="orange-text text-lighten-3" href="guindaste.html">Guindaste</a></li>
+                <li><a class="orange-text text-lighten-3" href="icamento.html">Içamento</a></li>
+                <li><a class="orange-text text-lighten-3" href="remocao.html">Remoção</a></li>
+                <li><a class="orange-text text-lighten-3" href="orcamento.html">Orçamento</a></li>
+                <li><a class="orange-text text-lighten-3" href="contato.html">Contato</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <p class="grey-text text-lighten-4 center">
                 (21) 2564-2454 / 9703-46374 / ID 35*43*74901 <br>
               E-mail: comercial@workxtransportes.com.br</p>
             </div>
-            <div class="col l3 s12">
-              <h5 class="white-text">Menu</h5>
-              <ul>
-                <li><a class="orange-text text-lighten-3" href="#!">Home</a></li>
-                <li><a class="orange-text text-lighten-3" href="#!">Serviços</a>
-                <ul>
-                  <li><a class="white-text" href="#!">Munk</a></li>
-                  <li><a class="white-text" href="#!">Guindaste</a></li>
-                  <li><a class="white-text" href="#!">Munk</a></li>
-                  <li><a class="white-text" href="#!">Guindaste</a></li>
-                </ul>
-              </li>
-              <li><a class="orange-text text-lighten-3" href="#!">Orçamento</a></li>
-              <li><a class="orange-text text-lighten-3" href="#!">Contato</a></li>
-            </ul>
+          </div>  
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+            <span class="center">Desenvolvido por <a class="orange-text text-lighten-3" href="http://www.mideiasdigitais.com.br" target="_blank">Mideias Digitais</a> e <a class="orange-text text-lighten-3" href="http://www.behance.net/BetoCorreaJr" target="_blank">Beto Junior</a></span>
           </div>
         </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-          Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-        </div>
-      </div>
-    </footer>
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/init.js"></script>
-  </body>
-</html>
+      </footer>
+      <!--  Scripts-->
+      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script src="js/materialize.js"></script>
+      <script src="js/init.js"></script>
+    </body>
+  </html>
